# takeoff

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
src/: constants.rs  eslint_setup.rs  main.rs  prettier_setup.rs  utility.rs
src/setups/: editorconfig_setup.rs  eslint_setup.rs  husky_setup.rs  license_setup.rs  migrate_setup.rs  mod.rs  prettier_setup.rs
templates/editorconfig/: .editorconfig
templates/eslint-ts/: .eslintignore  dependencies
templates/eslint-tsx/: .eslintignore  .eslintrc.json  dependencies
templates/husky-ts/: .lintstagedrc
templates/husky-tsx/: .lintstagedrc  dependencies
templates/migrate-ts/: tsconfig.json
templates/migrate-tsx/: tsconfig.json
templates/ts/: .eslintrc.json  .eslintrc.yml  .prettierrc
templates/tsx/: .eslintrc.yml  dependencies
