[package]
name = "takeoff"
version = "0.1.0"
edition = "2021"
authors = ["Haruki Jay Shimada <peaske16180@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/DrPoppyseed/takeoff"
description = "Setup ESLint, Prettier, EditorConfig, etc... for a js/ts project through an interactive CLI"

[dependencies]
inquire = "0.2.1"
futures = "0.3.21"
npm-package-json = "0.1.3"
serde_json = "1.0.79"
